--- a/TAGGING.html
+++ b/TAGGING.html
@@ -7,5 +7,7 @@
         <h1>MY FIRST HEADING </h1>
         <H2>MY SECOND HEADING </H2>
         <H3>MY THIRD HEADING </H3>
+
+        <p>I AM LEARNING HTML WITH SIR TYRON </p>
     </body>
 </html>
